logs/shell_script_21_09_2022_01-28-10.log
download SUCCESS
download SUCCESS
download SUCCESS
  File "/home/dataengr/project1/Climate_bash_python_project/./python_script.py", line 32
    combine_all_csv_files  pd.concat(csv_data,axis=0,ignore_index=True)
                           ^^
SyntaxError: invalid syntax
Script Failure
